# clearhealth-agent

./: .gitignore  README.md  pyproject.toml  validate_agent.py
app/: __init__.py  agent.py  research_agent.py  simplifier_agent.py
app/tools/: __init__.py  clinic_mcp_server.py  placeholder.py
tests/: test_clearhealth.py
